--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -5,6 +5,6 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<p>Esta aplicação gerencia vestibulares.</p>
+<p>A minha empresa é focada em vestibulares, visando trazer a melhor preparação e satisfação para nossos alunos.</p>
 
 {% endblock %}
